--- a/index.html
+++ b/index.html
@@ -2,42 +2,57 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <!--=============== FAVICON ===============-->
-    <link rel="shortcut icon" href="" type="image/x-icon">
+  <!--=============== FLATICON ===============-->
+  <link rel="stylesheet" href="" />
 
-    <!--=============== REMIXICONS ===============-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/remixicon/3.5.0/remixicon.css" crossorigin="">
+  <!--=============== SWIPER CSS ===============-->
+  <link rel="stylesheet" href="" />
 
-    <!--=============== SWIPER CSS ===============-->
-    <!-- <link rel="stylesheet" href="./assets/css/swiper-bundle.min.css"> -->
+  <!--=============== CSS ===============-->
+  <link rel="stylesheet" href="" />
 
-    <!--=============== CSS ===============-->
-    <link rel="stylesheet" href="assets/css/style.css">
-    <title>e-commerce website</title>
+  <title>Ecommerce Website</title>
 </head>
 
 <body>
-    <!--==================== HEADER ====================-->
-    <header class="header" id="header">
+  <!--=============== HEADER ===============-->
+  <header class="header"></header>
 
-    </header>
+  <!--=============== MAIN ===============-->
+  <main class="main">
+    <!--=============== HOME ===============-->
+    <section class="home"></section>
 
-    <!--==================== MAIN ====================-->
-    <main>
-        <!--==================== HOME ====================-->
-        <section class="home">
+    <!--=============== CATEGORIES ===============-->
+    <section class="categories"></section>
 
-        </section>
-    </main>
+    <!--=============== PRODUCTS ===============-->
+    <section class="products"></section>
 
-    <!--=============== SWIPER JS ===============-->
-    <!-- <script src="./assets/js/swiper-bundle.min.js"></script> -->
+    <!--=============== DEALS ===============-->
+    <section class="deals"></section>
 
-    <!--=============== MAIN JS ===============-->
-    <script src="assets/js/main.js"></script>
+    <!--=============== NEW ARRIVALS ===============-->
+    <section class="new__arrivals"></section>
+
+    <!--=============== SHOWCASE ===============-->
+    <section class="showcase"></section>
+
+    <!--=============== NEWSLETTER ===============-->
+    <section class="newsletter"></section>
+  </main>
+
+  <!--=============== FOOTER ===============-->
+  <footer class="footer"></footer>
+
+  <!--=============== SWIPER JS ===============-->
+  <script src=""></script>
+
+  <!--=============== MAIN JS ===============-->
+  <script src="./assets/js/main.js"></script>
 </body>
 
 </html>
