start html / css project

--- a/index.html
+++ b/index.html
@@ -12,14 +12,26 @@
   <link rel="stylesheet" href="" />
 
   <!--=============== CSS ===============-->
-  <link rel="stylesheet" href="" />
+  <link rel="stylesheet" href="./assets/css/styles.css" />
 
   <title>Ecommerce Website</title>
 </head>
 
 <body>
   <!--=============== HEADER ===============-->
-  <header class="header"></header>
+  <header class="header" id="header">
+    <div class="header__top">
+      <div class="header__conatiner container">
+        <div class="header__contact">
+          <span>(+01) - 9999 - 9999</span>
+          <span>Out Location</span>
+        </div>
+        <div class="header__alert-news">
+          
+        </div>
+      </div>
+    </div>
+  </header>
 
   <!--=============== MAIN ===============-->
   <main class="main">
