add newsletter section

--- a/index.html
+++ b/index.html
@@ -1791,16 +1791,32 @@
           </div>
 
         </div>
-        
+
       </div>
     </section>
 
     <!--=============== NEWSLETTER ===============-->
-    <section class="newsletter"></section>
+    <section class="newsletter section home__newsletter">
+      <div class="newsletter__container container grid">
+        <h3 class="newsletter__title flex">
+          <img src="assets/img/icon-email.svg" alt="" class="newsletter__icon">
+          Sing up to Newsletter
+        </h3>
+        <p class="newsletter__description">
+          ...and receive $25 cupion for first shopping
+        </p>
+        <form action="" class="newsletter__form">
+          <input type="email" class="newsletter__input" placeholder="Enter your email">
+          <button type="submit" class="newsletter__btn">Subscribe</button>
+        </form>
+      </div>
+    </section>
   </main>
 
   <!--=============== FOOTER ===============-->
-  <footer class="footer"></footer>
+  <footer class="footer">
+    
+  </footer>
 
   <!--=============== SWIPER JS ===============-->
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
