add newsletter section

--- a/index.html
+++ b/index.html
@@ -1803,9 +1803,9 @@
           Sing up to Newsletter
         </h3>
         <p class="newsletter__description">
-          ...and receive $25 cupion for first shopping
+          ...and receive $25 cupion for your first shopping
         </p>
-        <form action="" class="newsletter__form">
+        <form action="submit" class="newsletter__form">
           <input type="email" class="newsletter__input" placeholder="Enter your email">
           <button type="submit" class="newsletter__btn">Subscribe</button>
         </form>
@@ -1815,7 +1815,7 @@
 
   <!--=============== FOOTER ===============-->
   <footer class="footer">
-    
+
   </footer>
 
   <!--=============== SWIPER JS ===============-->
