--- a/details.html
+++ b/details.html
@@ -102,11 +102,68 @@
           </div>
         </div>
 
-        <dev class="details__group">
+        <div class="details__group">
           <h3 class="details__title">Henley Shirt</h3>
           <p class="details__brand">Brand : <span>adidas</span></p>
-          
-        </dev>
+
+          <div class="details__price flex">
+            <spna class="new__price">$116.89</spna>
+            <spna class="old__price">$200.00</spna>
+            <spna class="save__price">25% off</spna>
+          </div>
+          <p class="short__desription">
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.
+            Iste doloribus facere eius dicta, provident, illum
+            dolore numquam dolorum quaerat voluptates,
+            cum modi tempora nihil praesentium.
+          </p>
+          <ul class="product__list">
+            <li class="list__item flex">
+              <i class="ri-vip-crown-line"></i>1Year Al Jaweera Brand Warrenty
+            </li>
+            <li class="list__item flex">
+              <i class="ri-refresh-line"></i>30 Days Return Policy
+            </li>
+            <li class="list__item flex">
+              <i class="ri-bank-card-2-fill"></i>Cash on Delivery available
+            </li>
+          </ul>
+          <div class="details__color flex">
+            <span class="details__color-title">Color</span>
+            <ul class="color__list">
+              <li><a href="#" class="color___link" style="background-color: hsl(37,100%,65%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(353,100%,67%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(49,100%,60%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(304,100%,78%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(126,61%,52%);"></a></li>
+            </ul>
+          </div>
+
+
+          <div class="details__color flex">
+            <span class="details__color-title">Size</span>
+            <ul class="size__list">
+              <li><a href="#" class="size___link size-active">M</a></li>
+              <li><a href="#" class="size___link">L</a></li>
+              <li><a href="#" class="size___link">XL</a></li>
+              <li><a href="#" class="size___link">XXL</a></li>
+              <li><a href="#" class="size___link">M</a></li>
+            </ul>
+          </div>
+
+          <div class="deyails__action">
+            <input type="number" class="quantity" value="3">
+
+            <a href="#" class="btn btn-sm">Add to Cart</a>
+            <a href="#" class="details__action-btn">
+              <i class="ri-heart-line"></i>
+            </a>
+          </div>
+
+          <ul class="details__meta">
+<li></li>
+          </ul>
+        </div>
       </div>
     </section>
 
