adding more in details

--- a/details.html
+++ b/details.html
@@ -140,8 +140,8 @@
           </div>
 
 
-          <div class="details__color flex">
-            <span class="details__color-title">Size</span>
+          <div class="details__size flex">
+            <span class="details__size-title">Size</span>
             <ul class="size__list">
               <li><a href="#" class="size___link size-active">M</a></li>
               <li><a href="#" class="size___link">L</a></li>
@@ -151,7 +151,7 @@
             </ul>
           </div>
 
-          <div class="deyails__action">
+          <div class="details__action">
             <input type="number" class="quantity" value="3">
 
             <a href="#" class="btn btn-sm">Add to Cart</a>
@@ -161,7 +161,9 @@
           </div>
 
           <ul class="details__meta">
-<li></li>
+            <li class="meta__list flex"><span>SKU:</span> FWM15vKT</li>
+            <li class="meta__list flex"><span>Tags:</span> cloth , women , dress</li>
+            <li class="meta__list flex"><span>Availability</span> 8 Items In Stock</li>
           </ul>
         </div>
       </div>
