start details-tab

--- a/details.html
+++ b/details.html
@@ -170,7 +170,79 @@
     </section>
 
     <!--=============== DETAILS TAB ===============-->
-    <section class="details__tab"></section>
+    <section class="details__tab container">
+      <div class="detail__tabs">
+        <span class="detail__tab" data-target="#info">
+          Additional Info
+        </span>
+        <span class="detail__tab" data-target="#info">
+          Reviews(3)
+        </span>
+      </div>
+
+      <div class="details__tabs-content">
+        <div class="detail__tab-content active-tab" content id="info">
+          <table class="info__table">
+            <tr>
+              <th>Lorem, ipsum.</th>
+              <td> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, cum.</td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+            <tr>
+              <th></th>
+              <td></td>
+            </tr>
+          </table>
+        </div>
+      </div>
+    </section>
 
     <!--=============== PRODUCTS ===============-->
     <section class="products"></section>
