--- a/details.html
+++ b/details.html
@@ -184,60 +184,60 @@
         <div class="detail__tab-content active-tab" content id="info">
           <table class="info__table">
             <tr>
-              <th>Lorem, ipsum.</th>
-              <td> Lorem ipsum dolor sit, amet consectetur adipisicing elit. Vitae, cum.</td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
             <tr>
-              <th></th>
-              <td></td>
+              <th>Lorem, ipsum dolor.</th>
+              <td>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Suscipit, sapiente.</td>
             </tr>
           </table>
         </div>
