--- a/details.html
+++ b/details.html
@@ -175,7 +175,7 @@
         <span class="detail__tab" data-target="#info">
           Additional Info
         </span>
-        <span class="detail__tab" data-target="#info">
+        <span class="detail__tab" data-target="#review">
           Reviews(3)
         </span>
       </div>
@@ -241,7 +241,103 @@
             </tr>
           </table>
         </div>
-      </div>
+        <div class="details__tab-content" content id="review">
+          <div class="reviews__container grid">
+
+            <div class="review__single">
+              <div>
+                <img src="assets/img/avatar-1.jpg" alt="" class="review__img">
+                <h4 class="review__title">Jacky Chan</h4>
+              </div>
+              <div class="review__data">
+                <div class="review__rating">
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                </div>
+                <p class="review__description">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, quos temporibus recusandae architecto
+                  quidem illum.
+                </p>
+
+                <span class="review__date">december 4 , 2023 at 5:15 pm</span>
+              </div>
+            </div>
+            <div class="review__single">
+              <div>
+                <img src="assets/img/avatar-2.jpg" alt="" class="review__img">
+                <h4 class="review__title">jane doe</h4>
+              </div>
+              <div class="review__data">
+                <div class="review__rating">
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                </div>
+                <p class="review__description">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, quos temporibus
+                </p>
+
+                <span class="review__date">december 24 , 2023 at 1:15 pm</span>
+              </div>
+            </div>
+
+            <div class="review__single">
+              <div>
+                <img src="assets/img/avatar-3.jpg" alt="" class="review__img">
+                <h4 class="review__title">john doe</h4>
+              </div>
+              <div class="review__data">
+                <div class="review__rating">
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                  <i class="ri-star-fill"></i>
+                </div>
+                <p class="review__description">
+                  Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quo, quos temporibus recusandae architecto
+                  quidem illum.
+                  Lorem ipsum dolor sit amet.
+                </p>
+
+                <span class="review__date">january 4 , 2024 at 3:15 pm</span>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="review__form">
+            <h4 class="review__form-title">
+              Add a review
+            </h4>
+            <div class="review__product">
+              <div class="review__rating">
+                <i class="ri-star-fill"></i>
+                <i class="ri-star-fill"></i>
+                <i class="ri-star-fill"></i>
+                <i class="ri-star-fill"></i>
+                <i class="ri-star-fill"></i>
+              </div>
+              <form action="" class="form grid">
+                <textarea class="form__input textarea" placeholder="Write Comment"></textarea>
+                <div class="from__group grid">
+                  <input type="text" class="form__input" placeholder="Name">
+                  <input type="email" class="form__input" placeholder="Email">
+                </div>
+                <div class="form__btn">
+                  <button class="btn">
+
+                  </button>
+                </div>
+              </form>
+            </div>
+          </div>
+        </div>
     </section>
 
     <!--=============== PRODUCTS ===============-->
