--- a/details.html
+++ b/details.html
@@ -172,16 +172,11 @@
     <!--=============== DETAILS TAB ===============-->
     <section class="details__tab container">
       <div class="detail__tabs">
-        <span class="detail__tab" data-target="#info">
-          Additional Info
-        </span>
-        <span class="detail__tab" data-target="#review">
-          Reviews(3)
-        </span>
+        <span class="detail__tab active-tab" data-target="#info">Additional Info</span>
+        <span class="detail__tab" data-target="#reviews">Reviews(3)</span>
       </div>
-
       <div class="details__tabs-content">
-        <div class="detail__tab-content active-tab" content id="info">
+        <div class="details__tab-content active-tab" content id="info">
           <table class="info__table">
             <tr>
               <th>Lorem, ipsum dolor.</th>
@@ -241,7 +236,7 @@
             </tr>
           </table>
         </div>
-        <div class="details__tab-content" content id="review">
+        <div class="details__tab-content" content id="reviews">
           <div class="reviews__container grid">
 
             <div class="review__single">
@@ -338,10 +333,13 @@
             </div>
           </div>
         </div>
+      </div>
     </section>
 
     <!--=============== PRODUCTS ===============-->
-    <section class="products"></section>
+    <section class="products">
+      
+    </section>
 
     <!--=============== NEWSLETTER ===============-->
     <section class="newsletter section home__newsletter">
@@ -443,7 +441,7 @@
   <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
   <!--=============== MAIN JS ===============-->
-  <script src="./assets/js/main.js"></script>
+  <script src="assets/js/main.js"></script>
 </body>
 
 </html>
