--- a/details.html
+++ b/details.html
@@ -337,8 +337,175 @@
     </section>
 
     <!--=============== PRODUCTS ===============-->
-    <section class="products">
-      
+    <section class="products container section--lg">
+      <h3 class="section"><span>Related</span> Products</h3>
+
+      <div class="products__container grid">
+        <div class="product__item">
+          <div class="product__banner">
+            <a href="details.html" class="product__images">
+              <img src="assets/img/product-12-1.jpg" alt="" class="product__img default">
+              <img src="assets/img/product-12-2.jpg" alt="" class="product__img hover">
+            </a>
+            <div class="product__actions">
+              <a href="#" class="action__btn" aria-label="Quick View">
+                <i class="ri-eye-line"></i>
+              </a>
+              <a href="#" class="action__btn" aria-label="Add to wishlist">
+                <i class="ri-heart-line"></i>
+              </a>
+              <a href="#" class="action__btn" aria-label="Compare">
+                <i class="ri-shuffle-line"></i>
+              </a>
+            </div>
+            <div class="product__badge light-green">Hot</div>
+          </div>
+          <div class="product__content">
+            <span class="product__category">Clothing</span>
+            <a href="details.html">
+              <h3 class="product__title">Colorful Pattern Shirt</h3>
+            </a>
+            <div class="product__rating">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+            </div>
+            <div class="product__price flex">
+              <span class="new__price">$238.85</span>
+              <span class="old__price">$245.8</span>
+            </div>
+
+            <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
+              <i class="ri-shopping-bag-line"></i>
+            </a>
+          </div>
+        </div>
+        <div class="product__item">
+          <div class="product__banner">
+            <a href="details.html" class="product__images">
+              <img src="assets/img/product-3-1.jpg" alt="" class="product__img default">
+              <img src="assets/img/product-3-2.jpg" alt="" class="product__img hover">
+            </a>
+            <div class="product__actions">
+              <a href="#" class="action__btn" aria-label="Quick View">
+                <i class="ri-eye-line"></i>
+              </a>
+              <a href="#" class="action__btn" aria-label="Add to wishlist">
+                <i class="ri-heart-line"></i>
+              </a>
+              <a href="#" class="action__btn" aria-label="Compare">
+                <i class="ri-shuffle-line"></i>
+              </a>
+            </div>
+            <div class="product__badge light-orange">Hot</div>
+          </div>
+          <div class="product__content">
+            <span class="product__category">Clothing</span>
+            <a href="details.html">
+              <h3 class="product__title">Colorful Pattern Shirt</h3>
+            </a>
+            <div class="product__rating">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+            </div>
+            <div class="product__price flex">
+              <span class="new__price">$238.85</span>
+              <span class="old__price">$245.8</span>
+            </div>
+
+            <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
+              <i class="ri-shopping-bag-line"></i>
+            </a>
+          </div>
+        </div>
+        <div class="product__item">
+          <div class="product__banner">
+            <a href="details.html" class="product__images">
+              <img src="assets/img/product-10-1.jpg" alt="" class="product__img default">
+              <img src="assets/img/product-10-2.jpg" alt="" class="product__img hover">
+            </a>
+            <div class="product__actions">
+              <a href="#" class="action__btn" aria-label="Quick View">
+                <i class="ri-eye-line"></i>
+              </a>
+              <a href="#" class="action__btn" aria-label="Add to wishlist">
+                <i class="ri-heart-line"></i>
+              </a>
+              <a href="#" class="action__btn" aria-label="Compare">
+                <i class="ri-shuffle-line"></i>
+              </a>
+            </div>
+            <div class="product__badge light-pink">-30%</div>
+          </div>
+          <div class="product__content">
+            <span class="product__category">Clothing</span>
+            <a href="details.html">
+              <h3 class="product__title">Colorful Pattern Shirt</h3>
+            </a>
+            <div class="product__rating">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+            </div>
+            <div class="product__price flex">
+              <span class="new__price">$238.85</span>
+              <span class="old__price">$245.8</span>
+            </div>
+
+            <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
+              <i class="ri-shopping-bag-line"></i>
+            </a>
+          </div>
+        </div>
+        <div class="product__item">
+          <div class="product__banner">
+            <a href="details.html" class="product__images">
+              <img src="assets/img/product-6-1.jpg" alt="" class="product__img default">
+              <img src="assets/img/product-6-2.jpg" alt="" class="product__img hover">
+            </a>
+            <div class="product__actions">
+              <a href="#" class="action__btn" aria-label="Quick View">
+                <i class="ri-eye-line"></i>
+              </a>
+              <a href="#" class="action__btn" aria-label="Add to wishlist">
+                <i class="ri-heart-line"></i>
+              </a>
+              <a href="#" class="action__btn" aria-label="Compare">
+                <i class="ri-shuffle-line"></i>
+              </a>
+            </div>
+            <div class="product__badge light-pink">-22%</div>
+          </div>
+          <div class="product__content">
+            <span class="product__category">Clothing</span>
+            <a href="details.html">
+              <h3 class="product__title">Colorful Pattern Shirt</h3>
+            </a>
+            <div class="product__rating">
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+              <i class="ri-star-fill"></i>
+            </div>
+            <div class="product__price flex">
+              <span class="new__price">$238.85</span>
+              <span class="old__price">$245.8</span>
+            </div>
+
+            <a href="#" class="action__btn cart__btn" aria-label="Add To Cart">
+              <i class="ri-shopping-bag-line"></i>
+            </a>
+          </div>
+        </div>
+      </div>
     </section>
 
     <!--=============== NEWSLETTER ===============-->
