--- a/cart.html
+++ b/cart.html
@@ -84,15 +84,167 @@
       <ul class="breadcrumb__list flex container">
         <li><a href="index.html" class="breadcrumb__link">Home</a></li>
         <li><span class="breadcrumb__link">></span></li>
-        <li><span class="breadcrumb__link">Fachion</span></li>
+        <li><span class="breadcrumb__link">Shop</span></li>
         <li><span class="breadcrumb__link">></span></li>
-        <li><span class="breadcrumb__link">henley Shirt</span></li>
+        <li><span class="breadcrumb__link">Cart</span></li>
       </ul>
     </section>
 
     <!--=============== CART ===============-->
-    <section class="cart"></section>
+    <section class="cart section--lg container">
+      <div class="table__container">
+        <table class="table">
+          <tr>
+            <th>Image</th>
+            <th>Name</th>
+            <th>Price</th>
+            <th>Quantity</th>
+            <th>Subtotal</th>
+            <th>Remove</th>
+          </tr>
 
+          <tr>
+            <td><img src="assets/img/product-1-2.jpg" alt="" class="tabel__img"></td>
+            <td>
+              <h3 class="table__title">J.Crew Mencarntile Women's Short-Sleeve</h3>
+              <p class="table__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe, excepturi.
+              </p>
+            </td>
+            <td>
+              <span class="tabel__price">$110</span>
+            </td>
+            <td>
+              <input type="number" value="3" class="quantity">
+            </td>
+            <td>
+              <span class="table__subtotal">$220</span>
+            </td>
+            <td><i class="ri-delete-bin-7-line table__trash"></i></td>
+          </tr>
+
+          <tr>
+            <td><img src="assets/img/product-7-1.jpg" alt="" class="tabel__img"></td>
+            <td>
+              <h3 class="table__title">Amazon Esentials Women's Tank</h3>
+              <p class="table__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe, excepturi.
+              </p>
+            </td>
+            <td>
+              <span class="tabel__price">$110</span>
+            </td>
+            <td>
+              <input type="number" value="3" class="quantity">
+            </td>
+            <td>
+              <span class="table__subtotal">$220</span>
+            </td>
+            <td><i class="ri-delete-bin-7-line table__trash"></i></td>
+          </tr>
+
+          <tr>
+            <td><img src="assets/img/product-2-1.jpg" alt="" class="tabel__img"></td>
+            <td>
+              <h3 class="table__title">Amazon Brans - Saily Ritual Women's Jersey</h3>
+              <p class="table__description">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Saepe, excepturi.
+              </p>
+            </td>
+            <td>
+              <span class="tabel__price">$110</span>
+            </td>
+            <td>
+              <input type="number" value="3" class="quantity">
+            </td>
+            <td>
+              <span class="table__subtotal">$220</span>
+            </td>
+            <td><i class="ri-delete-bin-7-line table__trash"></i></td>
+          </tr>
+        </table>
+      </div>
+
+      <div class="cart__actions">
+        <a href="" class="btn btn--md flex">
+          <i class="ri-shuffle-line"></i> Update Cart
+        </a>
+        <a href="" class="btn btn--md flex">
+          <i class="ri-shopping-bag-line"></i> Continue Shopping
+        </a>
+      </div>
+
+      <div class="divider">
+        <i class="ri-fingerprint-2-line"></i>
+      </div>
+
+      <div class="cart__group grid">
+        <div>
+          <div class="cart___shipping">
+            <h3 class="section__title">
+              Calculate Shipping
+            </h3>
+            <form action="" class="form grid">
+              <input type="text" class="form__input" placeholder="State / Country">
+              <div class="from__group grid">
+                <input type="text" class="form__input" placeholder="city">
+                <input type="text" class="form__input" placeholder="PostCode / ZIP">
+              </div>
+
+              <div class="from__btn">
+                <button class="btn flex btn--sm">
+                  <i class="ri-shuffle-line"></i> Update
+                </button>
+              </div>
+            </form>
+          </div>
+
+
+          <div class="cart__coupon ">
+            <h3 class="section__title">Apply Coupon</h3>
+            <form action="" class="coupon__form form grid">
+              <div class="form__group grid">
+                <input type="text" class="form__input" placeholder="Enter Your Coupon">
+                <div class="from__btn">
+                  <button class="btn flex btn--sm">
+                    <i class="ri-price-tag-3-fill"></i> Apply
+                  </button>
+                </div>
+              </div>
+            </form>
+          </div>
+        </div>
+
+        <div class="cart__total">
+          <h3 class="section__title">
+            Cart Totals
+          </h3>
+
+          <table class="cart__total-table">
+            <tr>
+              <td>
+                <span class="cart__total-title">Cart Subtotal</span>
+                <span class="cart__total-price">$240.00</span>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span class="cart__total-title">Shipping</span>
+                <span class="cart__total-price">$10.00</span>
+              </td>
+            </tr>
+            <tr>
+              <td>
+                <span class="cart__total-title">Total</span>
+                <span class="cart__total-price">$250.00</span>
+              </td>
+            </tr>
+          </table>
+
+          <a href="checkout.html" class="btn flex btn--md">
+            <i class="ri-shopping-cart-2-fill"></i>
+            Proceed to Checkout
+          </a>
+        </div>
+      </div>
+    </section>
     <!--=============== NEWSLETTER ===============-->
     <section class="newsletter section home__newsletter">
       <div class="newsletter__container container grid">
