--- a/compare.html
+++ b/compare.html
@@ -42,7 +42,7 @@
       <div class="nav__menu" id="nav-menu">
         <ul class="nav___list">
           <li class="nav__item">
-            <a href="index.html" class="nav__link active-link">Home</a>
+            <a href="index.html" class="nav__link ">Home</a>
           </li>
           <li class="nav__item">
             <a href="shop.html" class="nav__link">Shop</a>
@@ -51,7 +51,7 @@
             <a href="accounts.html" class="nav__link">My Account</a>
           </li>
           <li class="nav__item">
-            <a href="compare.html" class="nav__link">Compare</a>
+            <a href="compare.html" class="nav__link active-link">Compare</a>
           </li>
           <li class="nav__item">
             <a href="login-register.html" class="nav__link">Login</a>
@@ -84,18 +84,93 @@
       <ul class="breadcrumb__list flex container">
         <li><a href="index.html" class="breadcrumb__link">Home</a></li>
         <li><span class="breadcrumb__link">></span></li>
-        <li><span class="breadcrumb__link">Shop</span></li>
-        <li><span class="breadcrumb__link">></span></li>
-        <li><span class="breadcrumb__link">Cart</span></li>
+        <li><span class="breadcrumb__link">Compare</span></li>
       </ul>
     </section>
 
-      <!--=============== COMPARE ===============-->
-      <section class="compare"></section>
+    <!--=============== COMPARE ===============-->
+    <section class="compare conatiner section--lg">
+      <table class="compare__table">
+        <tr>
+          <th>Image</th>
+          <td><img src="assets/img/product-2-1.jpg" alt="" class="compare__img"></td>
+          <td><img src="assets/img/product-4-1.jpg" alt="" class="compare__img"></td>
+          <td><img src="assets/img/product-7-1.jpg" alt="" class="compare__img"></td>
+        </tr>
+        <tr>
+          <th>Name</th>
+          <td>
+            <h3 class="table__title">Plain Striola Shirt</h3>
+          </td>
+          <td>
+            <h3 class="table__title">Chen Gardigan</h3>
+          </td>
+          <td>
+            <h3 class="table__title">Henley Shirt</h3>
+          </td>
+        </tr>
+        <tr>
+          <th>Price</th>
+          <td><span class="table__price">$35</span></td>
+          <td><span class="table__price">$67</span></td>
+          <td><span class="table__price">$24</span></td>
+        </tr>
+        <tr>
+          <th>footer description</th>
+          <td>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam
+              perspiciatis eligendi nihil eum eos odio temporibus
+              est rem doloribus sed quasi, iste sapiente animi
+              voluptas deserunt! Suscipit maxime repellat nesciunt!
+            </p>
+          </td>
+          <td>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam
+              perspiciatis eligendi nihil eum eos odio temporibus
+              est rem doloribus sed quasi, iste sapiente animi
+              voluptas deserunt! Suscipit maxime repellat nesciunt!
+            </p>
+          </td>
+          <td>
+            <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Magnam
+              perspiciatis eligendi nihil eum eos odio temporibus
+              est rem doloribus sed quasi, iste sapiente animi
+              voluptas deserunt! Suscipit maxime repellat nesciunt!
+            </p>
+          </td>
+        </tr>
+        <tr>
+          <th>Colors</th>
+          <td>
+            <ul class="color__list compare color">
+              <li><a href="#" class="color___link" style="background-color: hsl(37,100%,65%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(353,100%,67%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(49,100%,60%);"></a></li>
+            </ul>
+          </td>
+          
+          <td>
+            <ul class="color__list compare color">
+              <li><a href="#" class="color___link" style="background-color: hsl(37,100%,65%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(353,100%,67%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(49,100%,60%);"></a></li>
+            </ul>
+          </td>
+
+          <td>
+            <ul class="color__list compare color">
+              <li><a href="#" class="color___link" style="background-color: hsl(37,100%,65%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(353,100%,67%);"></a></li>
+              <li><a href="#" class="color___link" style="background-color: hsl(49,100%,60%);"></a></li>
+            </ul>
+          </td>
+        </tr>
+      </table>
+    </section>
 
     <!--=============== NEWSLETTER ===============-->
-    <section class="newsletter section ">
-      <div class="newsletter__container container grid">
+    <section class=" newsletter section ">
+      <div class=" newsletter__container container grid">
         <h3 class="newsletter__title flex">
           <img src="assets/img/icon-email.svg" alt="" class="newsletter__icon">
           Sing up to Newsletter
