finish   compare section and start my-account

--- a/compare.html
+++ b/compare.html
@@ -89,7 +89,7 @@
     </section>
 
     <!--=============== COMPARE ===============-->
-    <section class="compare conatiner section--lg">
+    <section class="compare container section--lg">
       <table class="compare__table">
         <tr>
           <th>Image</th>
