update my-account add new things

--- a/accounts.html
+++ b/accounts.html
@@ -113,12 +113,86 @@
         </div>
 
         <div class="tabs__content">
-          <div class="tab__content active-tab" content id="#dashboard">
+
+          <div class="tab__content active-tab" content id="dashboard">
             <h3 class="tab__header">Hello User</h3>
-            <p class="tab__body">
-              <p class="tab__description"></p>
-            </p>
+            <div class="tab__body">
+              <p class="tab__description">
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit.
+                Autem odit fugit impedit deserunt natus ipsa
+                maiores? Ex eum aut perspiciatis necessitatibus,
+                doloribus quos, alias laborum dolorem, quo nesciunt
+                ullam voluptas.
+              </p>
+            </div>
           </div>
+
+          <div class="tab__content" content id="orders">
+            <h3 class="tab__header">You Orders</h3>
+            <div class="tab__body">
+              <table class="place__order-table">
+                <tr>
+                  <th>Orders</th>
+                  <th>Date</th>
+                  <th>Status</th>
+                  <th>Total</th>
+                  <th>Actions</th>
+                </tr>
+
+                <tr>
+                  <td>#1357</td>
+                  <td>March 15,2023</td>
+                  <td>Processing</td>
+                  <td>$125.00</td>
+                  <td><a href="#" class="view__order">View</a></td>
+                </tr>
+
+                <tr>
+                  <td>#1246</td>
+                  <td>March 15,2023</td>
+                  <td>Completed</td>
+                  <td>$364.00</td>
+                  <td><a href="#" class="view__order">View</a></td>
+                </tr>
+
+                <tr>
+                  <td>#1357</td>
+                  <td>june 29,2023</td>
+                  <td>Completed</td>
+                  <td>$280.00</td>
+                  <td><a href="#" class="view__order">View</a></td>
+                </tr>
+              </table>
+            </div>
+          </div>
+
+          <div class="tab__centent" content id="update-profile">
+            <h3 class="tab__header">Update Profile</h3>
+            <div class="tab__body">
+              <form action="" class="from grid">
+                <input type="text" placeholder="Username" class="from__input">
+                <div class="form__btn">
+                  <button class="btn btn--md">Save</button>
+                </div>
+              </form>
+            </div>
+          </div>
+
+          <div class="tab__content active-tab" content id="address">
+            <h3 class="tab__header">Shipping Address</h3>
+            <div class="tab__body">
+              <address class="address">
+                2354 interstate <br>
+                15 vally Spur , <br>
+                Paper Ste. <br>
+                Marie,Mi 87246
+              </address>
+              <p class="city">New York</p>
+              <a href="" class="edit">Edit</a>
+            </div>
+          </div>
+
+          
         </div>
       </div>
     </section>
