update my-account add new things

--- a/accounts.html
+++ b/accounts.html
@@ -178,7 +178,7 @@
             </div>
           </div>
 
-          <div class="tab__content active-tab" content id="address">
+          <div class="tab__content" content id="address">
             <h3 class="tab__header">Shipping Address</h3>
             <div class="tab__body">
               <address class="address">
@@ -192,7 +192,20 @@
             </div>
           </div>
 
-          
+          <div class="tab__content" content id="change-password">
+            <h3 class="tab__header">Update Profile</h3>
+            <div class="tab__body">
+              <form action="" class="form grid">
+                <input type="password" placeholder="Current Password" class="from__input">
+                <input type="password" placeholder="New Password" class="from__input">
+                <input type="password" placeholder="Confirm Password" class="from__input">
+
+                <div class="form__btn">
+                  <button class="btn btn--md">Save</button>
+                </div>
+              </form>
+            </div>
+          </div>
         </div>
       </div>
     </section>
