finish  my-account

--- a/accounts.html
+++ b/accounts.html
@@ -90,31 +90,31 @@
 
     <!--=============== ACCOUNTS ===============-->
     <section class="accounts section--lg">
-      <div class="account__container container grid">
+      <div class="accounts__container container grid">
         <div class="account__tabs">
-          <p class="account__tab active-tab" data-target="#dashboard">
+          <p class="account__tab" data-target="#dashboard">
             <i class="ri-settings-5-line"></i> Dashboard
           </p>
-          <p class="account__tab " data-target="#orders">
+          <p class="account__tab" data-target="#orders">
             <i class="ri-shopping-bag-line"></i> Orders
           </p>
-          <p class="account__tab " data-target="#update-profile">
+          <p class="account__tab" data-target="#update-profile">
             <i class="ri-user-settings-line"></i> Update Profile
           </p>
-          <p class="account__tab " data-target="#address">
+          <p class="account__tab" data-target="#address">
             <i class="ri-map-pin-line"></i> My Address
           </p>
-          <p class="account__tab " data-target="#change-password">
+          <p class="account__tab" data-target="#change-password">
             <i class="ri-lock-line"></i> Change Password
           </p>
-          <p class="account__tab ">
+          <p class="account__tab">
             <i class="ri-logout-box-r-line"></i>Log Out
           </p>
         </div>
 
         <div class="tabs__content">
 
-          <div class="tab__content active-tab" content id="dashboard">
+          <div class="tab__content" content id="dashboard">
             <h3 class="tab__header">Hello User</h3>
             <div class="tab__body">
               <p class="tab__description">
@@ -170,7 +170,7 @@
             <h3 class="tab__header">Update Profile</h3>
             <div class="tab__body">
               <form action="" class="from grid">
-                <input type="text" placeholder="Username" class="from__input">
+                <input type="text" placeholder="Username" class="form__input">
                 <div class="form__btn">
                   <button class="btn btn--md">Save</button>
                 </div>
@@ -196,9 +196,9 @@
             <h3 class="tab__header">Update Profile</h3>
             <div class="tab__body">
               <form action="" class="form grid">
-                <input type="password" placeholder="Current Password" class="from__input">
-                <input type="password" placeholder="New Password" class="from__input">
-                <input type="password" placeholder="Confirm Password" class="from__input">
+                <input type="password" placeholder="Current Password" class="form__input">
+                <input type="password" placeholder="New Password" class="form__input">
+                <input type="password" placeholder="Confirm Password" class="form__input">
 
                 <div class="form__btn">
                   <button class="btn btn--md">Save</button>
