--- a/index.html
+++ b/index.html
@@ -40,6 +40,15 @@
         <img src="assets/img/logo.svg" alt="" class="nav__logo-img">
       </a>
       <div class="nav__menu" id="nav-menu">
+        <div class="nav__menu-top">
+          <a href="index.html" class="nav__menu-logo">
+            <img src="assets/img/logo.svg" alt="">
+          </a>
+          <div class="nav__close">
+            <i class="ri-close-line"></i>
+          </div>
+        </div>
+
         <ul class="nav___list">
           <li class="nav__item">
             <a href="index.html" class="nav__link active-link">Home</a>
@@ -73,6 +82,10 @@
           <img src="assets/img/icon-cart.svg" alt="">
           <span class="count">3</span>
         </a>
+
+        <div class="header__action-btn nav__toggle" id="nav-toggle">
+          <img src="assets/img/menu-burger.svg" alt="">
+        </div>
       </div>
     </nav>
   </header>
